syntax = "proto3";

package kolide.launcher;

option go_package = "querytarget";

service QueryTarget {
  rpc GetTargets(GetTargetsRequest) returns (GetTargetsResponse) {}
}

message GetTargetsRequest {
  string node_key = 1;
}

message GetTargetsResponse {
  repeated Target targets = 1;
}

message Target {
  string id = 1;
}
